# scrub-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
assets/: generate_icon.py  icon.png:PG$Secure  icon.png:Zone.Identifier
docs/: ARCHITECTURE.md  DECISIONS.md  DEVLOG.md  PLAN.md  PROGRESS.md  PUBLISHING.md
scrub_ai/: cli.py  config.py  hotkey.py  notifier.py  profiles.py  sanitizer.py  tray.py  watcher.py
scrub_ai/detectors/: __init__.py  base.py  cloud.py  custom.py  network.py  pii.py  secrets.py
tests/: test_base_detector.py  test_cli.py  test_cli_v11.py  test_cli_v12.py  test_cloud_detector.py  test_config.py  test_custom_detector.py  test_hotkey.py  test_network_detector.py  test_notifier.py  test_pii_detector.py  test_profiles.py  test_sanitizer.py  test_secrets_detector.py  test_tray.py  test_watcher.py
