[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrub-ai"
version = "1.2.0"
description = "Sanitize sensitive content from any text before sharing with AI assistants"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rajwinder Marwaha" }]
requires-python = ">=3.10"
keywords = ["security", "privacy", "ai", "sanitize", "secrets", "redact"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "pyperclip>=1.8",
    "keyboard>=0.13; sys_platform == 'win32'",
    "pystray>=0.19; sys_platform == 'win32'",
    "Pillow>=10.0; sys_platform == 'win32'",
    "win10toast>=0.9; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/rajwindermarwaha/scrub-ai"
Repository = "https://github.com/rajwindermarwaha/scrub-ai"
Issues = "https://github.com/rajwindermarwaha/scrub-ai/issues"

[project.optional-dependencies]
pii = ["presidio-analyzer>=2.2"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
scrub-ai = "scrub_ai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scrub_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
